rusty-cdk-macros/tests/fails/memory_boundary_high.rs
use rusty_cdk_macros::memory;

fn example() {
    let mem = memory!(10241);
}

fn main() {}